--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 authors = ["ChousX"]
 description = "A simple and efficient chunk management system for Bevy"
 readme = "README.md"
-repository = "https://github.com/ChousX/chunky"
+repository = "https://github.com/ChousX/chunky-bevy"
 license = "MIT OR Apache-2.0"
 keywords = ["bevy", "chunks", "voxel", "game", "spatial"]
 categories = ["game-engines", "game-development"]
